docs: update api.md and test-amplification.md for patch-test-from-mds and disable-failing-tests